text file, i/o, and try catch added in

--- a/MVC_Countries_Lab/MVC_Countries_Lab.csproj
+++ b/MVC_Countries_Lab/MVC_Countries_Lab.csproj
@@ -37,5 +37,8 @@
     <Compile Include="CountryListView.cs" />
     <Compile Include="CountryController.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Countrys.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
